tests/generics/async_basic.diag
async_basic.ax:1:1: error: await requires Future[T], found 0
